Update PyCon Tweets: Sentiment Analysis.ipynb

--- a/PyCon Tweets: Sentiment Analysis.ipynb
+++ b/PyCon Tweets: Sentiment Analysis.ipynb
@@ -29,8 +29,8 @@
     "import re\n",
     "\n",
     "# Initialize and create the Cosmos client\n",
-    "endpoint = \"https://tweets-pycon.documents.azure.com:443/\"\n",
-    "key = '5Qq1xszozzcaPBr0B1mlDfp3dhzgWJJXjl13R29ZgjyI2DEVFanP3Zi3v7Vj3Ef65aE4CL8tfNXyzZLjZW5HWA=='\n",
+    "endpoint = "",
+    "key = "",
     "\n",
     "client = CosmosClient(endpoint, key)\n",
     "\n",
