--- a/PyCon Tweets: Sentiment Analysis.ipynb
+++ b/PyCon Tweets: Sentiment Analysis.ipynb
@@ -4,19 +4,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# PyCon 2022: Sentiment Analysis"
+    "# PyCon 2022: Sentiment Analysis of Tweets"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Connect to Cosmos DB to retrieve data"
+    "First, we will retrieve data on tweets about PyCon from the Cosmos database."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 262,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,8 +29,8 @@
     "import re\n",
     "\n",
     "# Initialize and create the Cosmos client\n",
-    "endpoint = \"\"\n",
-    "key = \"\"\n",
+    "endpoint = \"https://tweets-pycon.documents.azure.com:443/\"\n",
+    "key = '5Qq1xszozzcaPBr0B1mlDfp3dhzgWJJXjl13R29ZgjyI2DEVFanP3Zi3v7Vj3Ef65aE4CL8tfNXyzZLjZW5HWA=='\n",
     "\n",
     "client = CosmosClient(endpoint, key)\n",
     "\n",
@@ -43,12 +43,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Data Overview"
+    "### Overview\n",
+    "A summary of the distribution of tweets."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 263,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -81,6 +82,7 @@
     "\n",
     "df = pd.DataFrame(tweets, columns=[\"sentiment\"])\n",
     "\n",
+    "# Filter dataframes\n",
     "df_positive = df[df.sentiment == \"positive\"]\n",
     "pos_count = df_positive.shape[0]\n",
     "df_negative = df[df.sentiment == \"negative\"]\n",
@@ -97,12 +99,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Tweets categorized as extremely positive"
+    "### Positive Tweets"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 264,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -160,12 +162,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Tweets categorized as extremely negative"
+    "### Negative Tweets"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 265,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -199,12 +201,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Tweets categorized as highly neutral"
+    "### Neutral Tweets"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 266,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -247,12 +249,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Tweets categorized as 'mixed'"
+    "### Mixed Tweets"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 267,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -290,19 +292,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Overall Analysis"
+    "### Overall Analysis"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 268,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "From the sentiment analysis, we have detected that the overall sentiment of tweets at PyCon 2022 is neutral .\n"
+      "From the sentiment analysis, we have detected that so far, the overall sentiment of tweets at PyCon 2022 is neutral .\n"
      ]
     }
    ],
@@ -322,7 +324,7 @@
     "elif (total_tweets.index(max_value) == 3):\n",
     "    overall_sentiment = 'mixed'\n",
     "\n",
-    "print(\"From the sentiment analysis, we have detected that the overall sentiment of tweets at PyCon 2022 is\", overall_sentiment, \".\")\n"
+    "print(\"From the sentiment analysis, we have detected that so far, the overall sentiment of tweets at PyCon 2022 is\", overall_sentiment, \".\")\n"
    ]
   }
  ],
